--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
-        <script src="p1.js"></script>
+        <script src="main.js"></script>
 </body>
 
 </html>
